[gd_scene load_steps=23 format=3 uid="uid://flxri8fkcvso"]

[ext_resource type="Texture2D" uid="uid://bxktaf0peuy12" path="res://Sprites/Maidens.png" id="1_2yia0"]
[ext_resource type="Script" path="res://Entities/hyrondale.gd" id="1_7mnt7"]
[ext_resource type="Texture2D" uid="uid://dsv5eyowx53yl" path="res://Sprites/hyrondale.png" id="2_2ukhw"]
[ext_resource type="AudioStream" uid="uid://bv2v1xb5q42hq" path="res://Sounds/Effects/enemy-hit.mp3" id="4_omalx"]
[ext_resource type="AudioStream" uid="uid://uein7k2m6biu" path="res://Sounds/Effects/enemy-death.mp3" id="5_jui5r"]
[ext_resource type="AudioStream" uid="uid://cnr61ldh742th" path="res://Sounds/Effects/link-hurt.mp3" id="6_8kl3p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e74pd"]
atlas = ExtResource("1_2yia0")
region = Rect2(331, 144, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_406ox"]
atlas = ExtResource("1_2yia0")
region = Rect2(307, 144, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr4ef"]
atlas = ExtResource("1_2yia0")
region = Rect2(283, 144, 24, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgo3l"]
atlas = ExtResource("2_2ukhw")
region = Rect2(21, 87, 20, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jy8q"]
atlas = ExtResource("2_2ukhw")
region = Rect2(41, 87, 20, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dc3u"]
atlas = ExtResource("2_2ukhw")
region = Rect2(61, 87, 20, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_r12gl"]
atlas = ExtResource("2_2ukhw")
region = Rect2(65, 113, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r241"]
atlas = ExtResource("2_2ukhw")
region = Rect2(65, 113, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_v74lf"]
atlas = ExtResource("2_2ukhw")
region = Rect2(83, 113, 18, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_bknf6"]
atlas = ExtResource("2_2ukhw")
region = Rect2(19, 139, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8ssq"]
atlas = ExtResource("2_2ukhw")
region = Rect2(41, 139, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7hk0"]
atlas = ExtResource("2_2ukhw")
region = Rect2(63, 139, 22, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_0i5i6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e74pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_406ox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr4ef")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgo3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jy8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dc3u")
}],
"loop": true,
"name": &"WalkingDown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r12gl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r241")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v74lf")
}],
"loop": true,
"name": &"WalkingRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bknf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8ssq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7hk0")
}],
"loop": true,
"name": &"WalkingUp",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6mfsk"]
radius = 9.0
height = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ejyj5"]
radius = 13.0384

[sub_resource type="CircleShape2D" id="CircleShape2D_5fd1t"]
radius = 40.0125

[node name="hyrondale" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
script = ExtResource("1_7mnt7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0i5i6")
animation = &"WalkingDown"
autoplay = "WalkingDown"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 4)
shape = SubResource("CapsuleShape2D_6mfsk")

[node name="HyrondaleHitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HyrondaleHitBox"]
position = Vector2(1, 4)
shape = SubResource("CircleShape2D_ejyj5")

[node name="HyrondaleTerritory" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HyrondaleTerritory"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_5fd1t")

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -16.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = -13.0
show_percentage = false

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-100, -87)
stream = ExtResource("4_omalx")

[node name="Death" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-72, -64)
stream = ExtResource("5_jui5r")

[node name="PlayerHit" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-44, -41)
stream = ExtResource("6_8kl3p")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="HyrondaleHitBox" to="." method="_on_hyrondale_hit_box_body_entered"]
[connection signal="body_exited" from="HyrondaleHitBox" to="." method="_on_hyrondale_hit_box_body_exited"]
[connection signal="body_entered" from="HyrondaleTerritory" to="." method="_on_hyrondale_territory_body_entered"]
[connection signal="body_exited" from="HyrondaleTerritory" to="." method="_on_hyrondale_territory_body_exited"]
